; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_user_get_photos_count_pred.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_user_get_photos_count_pred.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@result_obj = common dso_local global i32 0, align 4
@MAX_RESULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @user_get_photos_count_pred(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @user_loaded(i32* %9)
  %11 = call i32 @assert(i32 %10)
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32* @user_get_photo_data(i32* %12, i32 %13)
  store i32* %14, i32** %8, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %32

18:                                               ; preds = %3
  %19 = load i32*, i32** %7, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %26

21:                                               ; preds = %18
  %22 = load i32*, i32** %8, align 8
  %23 = load i32, i32* @result_obj, align 4
  %24 = load i32, i32* @MAX_RESULT, align 4
  %25 = call i32 @data_slice(i32* %22, i32 %23, i32 %24, i32 0)
  store i32 %25, i32* %4, align 4
  br label %32

26:                                               ; preds = %18
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* @result_obj, align 4
  %29 = load i32, i32* @MAX_RESULT, align 4
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @data_slice_filtered(i32* %27, i32 %28, i32 %29, i32 0, i32* %30)
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %26, %21, %17
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @user_loaded(i32*) #1

declare dso_local i32* @user_get_photo_data(i32*, i32) #1

declare dso_local i32 @data_slice(i32*, i32, i32, i32) #1

declare dso_local i32 @data_slice_filtered(i32*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
